--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.2",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
