refactor: Update project name to HomeFresh and adjust related configurations

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_APP_NAME=HomeFoodMobile
+VITE_APP_NAME=HomeFresh
 VITE_FIREBASE_API_KEY=your_firebase_api_key
 VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
