--- a/env.example
+++ b/env.example
@@ -2,7 +2,7 @@
 # All variables must start with VITE_ to be available in the browser
 
 # App Configuration
-VITE_APP_NAME=HomeFoods
+VITE_APP_NAME=HomeFresh
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key_here
