feat: Enhance food detail functionality with kitchen reviews and improved UI
- Added a helper function to format numerical counts (e.g., 1K, 1M).
- Implemented a new hook `useKitchenReviews` to fetch aggregated kitchen reviews.
- Updated `useFoodDetail` to utilize the new kitchen reviews functionality.
- Refactored `FoodDetailPage` to handle query parameters for kitchen and food IDs.
- Added error handling for missing parameters in the URL.
- Introduced a like feature for food items with visual feedback.
- Enhanced the UI with pickup details and improved styling for better user experience.
- Updated service functions to fetch all reviews for a kitchen and calculate review statistics.
- Added mock data for kitchen reviews to facilitate testing.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint . --ext .js,.jsx"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
