--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "firebase": "^10.12.2",
+    "firebase-functions": "^6.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
