--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
+    "react-phone-number-input": "^3.4.14",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.0",
     "redux-persist": "^6.0.0"
