--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-functions": "^6.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
